--- a/omaha-commerce/static/css/src/shop-homepage.css
+++ b/omaha-commerce/static/css/src/shop-homepage.css
@@ -5,7 +5,13 @@
  */
 
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    padding-top: 70px;
+    /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    font-size: 12px;
+}
+
+.form-control {
+    font-size: 12px;
 }
 
 .slide-image {
@@ -16,8 +22,7 @@ body {
     margin-bottom: 30px;
 }
 
-.carousel-control,
-.item {
+.carousel-control, .item {
     border-radius: 4px;
 }
 
