--- a/omaha-commerce/static/css/src/shop-homepage.css
+++ b/omaha-commerce/static/css/src/shop-homepage.css
@@ -57,3 +57,15 @@ body {
 footer {
     margin: 50px 0;
 }
+
+.menu{
+	cursor: pointer;
+}
+
+.ng-invalid{
+	border-left: 1px solid red;
+}
+
+form{
+	border-left: 0px !important;
+}
